fixed z-index

--- a/src/app.css
+++ b/src/app.css
@@ -102,7 +102,7 @@ white-space: pre-wrap;
         height: 600px;
         object-fit: cover;
     }
-    .marginTop-carousel {
+    .marginTop-fixed {
         margin-top: 84px;
     }
 
@@ -130,7 +130,7 @@ white-space: pre-wrap;
     .resp-tiempo {
         padding: 20px;
     }
-    .marginTop-carousel {
+    .marginTop-fixed {
         margin-top: 124px;
     }
   }
